prevent overlapping text on mobile

--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -41,6 +41,10 @@ section {
     text-align: left;
     transition: background-color 0.2s ease-in-out;
 
+    @include mobile {
+      grid-template-rows: 50px auto auto;
+    }
+
     &:hover {
       background-color: rgba(255, 255, 255, 0.1);
     }
